--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -168,14 +168,16 @@
     "        # Network layers\n",
     "        self.layers = [\n",
     "            keras.layers.InputLayer(input_shape=(noise_dimension,)),\n",
-    "            keras.layers.Dense(units=5*5*128),\n",
-    "            keras.layers.Dropout(rate=0.3),\n",
-    "            keras.layers.Reshape(target_shape=(5, 5, 128)),\n",
-    "            keras.layers.ReLU(),\n",
-    "            keras.layers.Conv2DTranspose(filters=64, kernel_size=(3, 3), strides=(1, 1)),\n",
-    "            keras.layers.ReLU(),\n",
-    "            keras.layers.Conv2DTranspose(filters=16, kernel_size=(3, 3), strides=(2, 2), padding='same'),\n",
-    "            keras.layers.ReLU(),\n",
+    "            keras.layers.Dense(units=7*7*256),\n",
+    "            keras.layers.BatchNormalization(),\n",
+    "            keras.layers.Reshape(target_shape=(7, 7, 256)),\n",
+    "            keras.layers.LeakyReLU(),\n",
+    "            keras.layers.Conv2DTranspose(filters=128, kernel_size=(3, 3), strides=(1, 1), padding='same'),\n",
+    "            keras.layers.BatchNormalization(),\n",
+    "            keras.layers.LeakyReLU(),\n",
+    "            keras.layers.Conv2DTranspose(filters=64, kernel_size=(3, 3), strides=(2, 2), padding='same'),\n",
+    "            keras.layers.BatchNormalization(),\n",
+    "            keras.layers.LeakyReLU(),\n",
     "            keras.layers.Conv2DTranspose(filters=1, kernel_size=(3, 3), strides=(2, 2), padding='same'),\n",
     "            keras.layers.Activation(tf.nn.tanh),\n",
     "        ]\n",
@@ -235,20 +237,16 @@
     "        # Network layers\n",
     "        self.layers = [\n",
     "            keras.layers.InputLayer(input_shape=input_shape),\n",
-    "            keras.layers.Conv2D(filters=32, kernel_size=(3, 3), strides=(1, 1)),\n",
-    "            keras.layers.ReLU(),\n",
-    "            keras.layers.MaxPool2D(pool_size=2),\n",
-    "            keras.layers.Conv2D(filters=64, kernel_size=(3, 3), strides=(1, 1)),\n",
-    "            keras.layers.ReLU(),\n",
-    "            keras.layers.MaxPool2D(pool_size=(2, 2)),\n",
-    "            keras.layers.Dropout(rate=0.3),\n",
-    "            keras.layers.Flatten(),\n",
-    "            keras.layers.Dense(units=512),\n",
-    "            keras.layers.ReLU(),\n",
-    "            keras.layers.Dropout(rate=0.3),\n",
-    "            keras.layers.Dense(units=256),\n",
-    "            keras.layers.ReLU(),\n",
+    "            keras.layers.Conv2D(filters=32, kernel_size=(3, 3), strides=(2, 2)),\n",
+    "            keras.layers.LeakyReLU(),\n",
+    "            keras.layers.Conv2D(filters=64, kernel_size=(3, 3), strides=(2, 2)),\n",
+    "            keras.layers.LeakyReLU(),\n",
+    "            keras.layers.Conv2D(filters=128, kernel_size=(3, 3), strides=(2, 2)),\n",
+    "            keras.layers.LeakyReLU(),\n",
     "            keras.layers.Dropout(rate=0.2),\n",
+    "            keras.layers.Flatten(),\n",
+    "            keras.layers.Dense(units=64),\n",
+    "            keras.layers.Dropout(rate=0.1),\n",
     "            keras.layers.Dense(units=1),\n",
     "            keras.layers.Activation(tf.nn.sigmoid)\n",
     "        ]\n",
