--- a/gan/gan_mnist.ipynb
+++ b/gan/gan_mnist.ipynb
@@ -62,7 +62,7 @@
     "EPOCHS = 50\n",
     "\n",
     "N_EXAMPLES = 12\n",
-    "G_LEARNING_RATE = 2e-4\n",
+    "G_LEARNING_RATE = 1e-4\n",
     "D_LEARNING_RATE = 1e-4\n",
     "\n",
     "ARCH = 'gan'\n",
@@ -1047,10 +1047,29 @@
     "confusion_matrix = tf.math.confusion_matrix(labels, preds, num_classes=2).numpy()\n",
     "plt.figure(figsize=(10, 7))\n",
     "sn.set(font_scale=1.4)\n",
-    "ax = sn.heatmap(confusion_matrix, annot=True, annot_kws={'size': 16}, fmt='d', cmap=sn.cm.rocket_r, xticklabels=named_labels, yticklabels=named_labels)\n",
-    "ax.xaxis.tick_top()\n",
-    "ax.xaxis.set_label_position('top')\n",
-    "ax.tick_params(axis='both', which='major', labelsize=16, labelbottom=False, bottom=False, top=False, labeltop=True)\n",
+    "sn.heatmap(confusion_matrix, annot=True, annot_kws={'size': 14}, fmt='d', cmap=sn.cm.rocket, xticklabels=named_labels, yticklabels=named_labels)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('Actual')\n",
+    "plt.title('Confusion Matrix')\n",
+    "plt.savefig(os.path.join(METRICS_PATH, 'confusion_matrix.png'))\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normal_confusion_matrix = confusion_matrix.numpy()\n",
+    "normal_confusion_matrix = np.divide(normal_confusion_matrix.astype('float'), normal_confusion_matrix.sum(axis=1)[:, np.newaxis])\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sn.set(font_scale=1.4)\n",
+    "sn.heatmap(confusion_matrix, annot=True, annot_kws={'size': 14}, fmt='d', cmap=sn.cm.rocket, xticklabels=named_labels, yticklabels=named_labels)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('Actual')\n",
+    "plt.title('Confusion Matrix')\n",
     "plt.savefig(os.path.join(METRICS_PATH, 'confusion_matrix.png'))\n",
     "plt.show()\n",
     "plt.close()"
