--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -63,11 +63,12 @@
    "outputs": [],
    "source": [
     "NOISE_DIMENSION = 128\n",
-    "TRAIN_SIZE = 10000\n",
-    "TEST_SIZE = 2000\n",
+    "TRAIN_SIZE = 60000\n",
+    "TEST_SIZE = 10000\n",
     "BATCH_SIZE = 64\n",
     "EPOCHS = 20\n",
     "\n",
+    "EPSILON = 1e-7\n",
     "N_EXAMPLES = 25\n",
     "G_LEARNING_RATE = 1e-4\n",
     "D_LEARNING_RATE = 1e-4\n",
@@ -83,6 +84,7 @@
     "assert TRAIN_SIZE <= 600000\n",
     "assert BATCH_SIZE >= 1\n",
     "assert EPOCHS >= 1\n",
+    "assert EPSILON > 0\n",
     "assert N_EXAMPLES >= 1\n",
     "assert G_LEARNING_RATE > 0\n",
     "assert D_LEARNING_RATE > 0"
@@ -189,7 +191,7 @@
     "    @staticmethod\n",
     "    @tf.function\n",
     "    def loss(generated_output):\n",
-    "        loss_i = tf.math.log(generated_output)\n",
+    "        loss_i = tf.math.log(generated_output+EPSILON)\n",
     "        loss = -tf.math.reduce_mean(loss_i)\n",
     "        return loss"
    ]
@@ -258,7 +260,7 @@
     "    @staticmethod\n",
     "    @tf.function\n",
     "    def loss(trained_ouput, generated_output) -> tf.Tensor:\n",
-    "        loss_i = tf.math.log(trained_ouput) + tf.math.log(1-generated_output)\n",
+    "        loss_i = tf.math.log(trained_ouput+EPSILON) + tf.math.logp(EPSILON-generated_output)\n",
     "        loss = -tf.math.reduce_mean(loss_i)\n",
     "        return loss"
    ]
@@ -295,7 +297,7 @@
    "metadata": {},
    "source": [
     "### Initialize Generator and Discriminator\n",
-    "* Generator takes in 100-dimensional Gaussian sample, and outputs an image.\n",
+    "* Generator takes in 128-dimensional Gaussian sample, and outputs an image.\n",
     "* Discriminator takes in images, and outputs whether it is classified as data from the training distribution or generator distribution"
    ]
   },
@@ -310,22 +312,6 @@
     "\n",
     "discriminator = Discriminator(input_shape=(train_images.shape[1:]))\n",
     "discriminator_optimizer = discriminator.optimizer(D_LEARNING_RATE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "checkpoint_dir = './training_checkpoints'\n",
-    "checkpoint_prefix = os.path.join(checkpoint_dir, 'ckpt')\n",
-    "checkpoint = tf.train.Checkpoint(\n",
-    "    generator=generator,\n",
-    "    discriminator=discriminator,\n",
-    "    generator_optimizer=generator_optimizer,\n",
-    "    discriminator_optimizer=discriminator_optimizer,\n",
-    ")"
    ]
   },
   {
@@ -704,6 +690,7 @@
     "plt.plot(batch_history['d_loss'], label='Discriminator Loss')\n",
     "plt.xlabel('Batch #')\n",
     "plt.ylabel('Loss')\n",
+    "plt.title('DCGAN Loss')\n",
     "plt.legend()\n",
     "plt.savefig(os.path.join(METRICS_PATH, 'loss.png'))\n",
     "plt.show()\n",
@@ -732,6 +719,7 @@
     "plt.plot(batch_history['fake_acc'], label='Generated Data Accuracy')\n",
     "plt.xlabel('Batch #')\n",
     "plt.ylabel('Accuracy')\n",
+    "plt.title('DCGAN Accuracy')\n",
     "plt.legend()\n",
     "plt.savefig(os.path.join(METRICS_PATH, 'accuracy.png'))\n",
     "plt.show()\n",
