--- a/gan/gan_mnist.ipynb
+++ b/gan/gan_mnist.ipynb
@@ -61,6 +61,7 @@
     "BATCH_SIZE = 32\n",
     "EPOCHS = 50\n",
     "\n",
+    "EPSILON = 1e-7\n",
     "N_EXAMPLES = 12\n",
     "G_LEARNING_RATE = 1e-4\n",
     "D_LEARNING_RATE = 1e-4\n",
@@ -1164,7 +1165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with imageio.get_writer(os.path.join(METRICS_PATH, 'gan.gif'), mode='I') as writer:\n",
+    "with imageio.get_writer(os.path.join(METRICS_PATH, 'dcgan.gif'), mode='I') as writer:\n",
     "    filenames = glob.glob(os.path.join(OUTPUT_PATH, 'epoch*.png'))\n",
     "    filenames = sorted(filenames)\n",
     "    for filename in filenames:\n",
