--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -74,8 +74,23 @@
     "D_LEARNING_RATE = 1e-4\n",
     "\n",
     "ARCH = 'dcgan'\n",
-    "METRICS_PATH = f'metrics/{ARCH}/'\n",
-    "OUTPUT_PATH = f'output/{ARCH}/'\n",
+    "\n",
+    "IN_COLAB = False\n",
+    "try:\n",
+    "    import google.colab\n",
+    "    IN_COLAB = True\n",
+    "except:\n",
+    "    IN_COLAB = False\n",
+    "\n",
+    "path_prefix = ''\n",
+    "\n",
+    "if IN_COLAB:\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    path_prefix = '/content/drive/My Drive/gan-vae/gan'\n",
+    "    \n",
+    "METRICS_PATH = f'{path_prefix}/metrics/{ARCH}/'\n",
+    "OUTPUT_PATH = f'{path_prefix}/output/{ARCH}/'\n",
     "\n",
     "!mkdir -p $METRICS_PATH\n",
     "!mkdir -p $OUTPUT_PATH\n",
