--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -66,7 +66,7 @@
     "TRAIN_SIZE = 60000\n",
     "TEST_SIZE = 10000\n",
     "BATCH_SIZE = 64\n",
-    "EPOCHS = 20\n",
+    "EPOCHS = 100\n",
     "\n",
     "EPSILON = 1e-7\n",
     "N_EXAMPLES = 25\n",
@@ -92,8 +92,9 @@
     "METRICS_PATH = f'{path_prefix}/metrics/{ARCH}/'\n",
     "OUTPUT_PATH = f'{path_prefix}/output/{ARCH}/'\n",
     "\n",
-    "!mkdir -p $METRICS_PATH\n",
-    "!mkdir -p $OUTPUT_PATH\n",
+    "if not IN_COLAB:\n",
+    "    !mkdir -p $METRICS_PATH\n",
+    "    !mkdir -p $OUTPUT_PATH\n",
     "\n",
     "assert NOISE_DIMENSION > 0\n",
     "assert TRAIN_SIZE <= 600000\n",
@@ -335,14 +336,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def record_sample(generator: Generator, epoch: int, test_input: tf.Tensor, save: bool=True, show=True):\n",
-    "    predictions = generator(test_input, training=False)\n",
+    "def record_sample(generator: Generator, epoch: int, save: bool=True, show=True):\n",
+    "    fixed_predictions = generator(fixed_noise)[:, :, :, 0]\n",
+    "    random_predictions = generator(tf.random.normal(fixed_noise.shape))[:, :, :, 0]\n",
     "\n",
-    "    plt.figure(figsize=(8, 8))\n",
-    "    for i in range(predictions.shape[0]):\n",
-    "        plt.subplot(5, 5, i+1)\n",
-    "        plt.imshow(predictions[i]*127.5 + 127.5, cmap=plt.cm.gray)\n",
-    "        plt.axis('off')\n",
+    "    titles = ['Fixed Noise Samples', 'Variational Noise Samples']\n",
+    "    data = [fixed_predictions, random_predictions]\n",
+    "\n",
+    "    f = plt.figure(figsize=(8, 4))\n",
+    "    f.suptitle('GAN Output')\n",
+    "    outer = gridspec.GridSpec(1, 2)\n",
+    "\n",
+    "    for i in range(2):\n",
+    "        inner = gridspec.GridSpecFromSubplotSpec(int(math.sqrt(N_EXAMPLES)), int(math.sqrt(N_EXAMPLES)), subplot_spec=outer[i])\n",
+    "        predictions = data[i]\n",
+    "        for j in range(predictions.shape[0]):\n",
+    "            ax = plt.Subplot(f, inner[j])\n",
+    "            ax.imshow(predictions[j]*127.5 + 127.5, cmap=plt.cm.gray)\n",
+    "            ax.axis('off')\n",
+    "            if j == int(math.sqrt(N_EXAMPLES)) // 2:\n",
+    "                ax.set_title(titles[i])\n",
+    "            f.add_subplot(ax)\n",
     "\n",
     "    if save:\n",
     "        plt.savefig(os.path.join(OUTPUT_PATH, 'epoch_{:04d}.png'.format(epoch)))\n",
@@ -489,7 +503,7 @@
     "        generator_optimizer.apply_gradients(zip(grad_g, generator.trainable_variables))\n",
     "        discriminator_optimizer.apply_gradients(zip(grad_d, discriminator.trainable_variables))    \n",
     "\n",
-    "    record_sample(generator, epoch, fixed_noise, show=False)"
+    "    record_sample(generator, epoch, show=False)"
    ]
   },
   {
