--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -41,7 +41,9 @@
     "import seaborn as sn\n",
     "\n",
     "from abc import abstractstaticmethod\n",
+    "from matplotlib import gridspec\n",
     "from matplotlib import pyplot as plt\n",
+    "from PIL import Image\n",
     "from tensorflow import keras\n",
     "\n",
     "sn.set_theme()"
