--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -264,7 +264,7 @@
     "            keras.layers.LeakyReLU(),\n",
     "            keras.layers.Conv2D(filters=64, kernel_size=(3, 3), strides=(2, 2)),\n",
     "            keras.layers.LeakyReLU(),\n",
-    "            keras.layer.Dropout(rate=0.3),\n",
+    "            keras.layers.Dropout(rate=0.3),\n",
     "            keras.layers.Conv2D(filters=128, kernel_size=(3, 3), strides=(2, 2)),\n",
     "            keras.layers.LeakyReLU(),\n",
     "            keras.layers.Dropout(rate=0.2),\n",
