change metric label

--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -542,7 +542,7 @@
     "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['acc'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1), label='Total Accuracy')\n",
     "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['real_acc'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1), label='Training Data Accuracy')\n",
     "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['fake_acc'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1), label='Generated Data Accuracy')\n",
-    "plt.xlabel('Batch #')\n",
+    "plt.xlabel('Epoch #')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.title('DCGAN Accuracy')\n",
     "plt.legend()\n",
