remove bias from conv upsampling

--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -191,13 +191,13 @@
     "            keras.layers.BatchNormalization(),\n",
     "            keras.layers.Reshape(target_shape=(7, 7, 256)),\n",
     "            keras.layers.LeakyReLU(),\n",
-    "            keras.layers.Conv2DTranspose(filters=128, kernel_size=(3, 3), strides=(1, 1), padding='same'),\n",
+    "            keras.layers.Conv2DTranspose(filters=128, kernel_size=(3, 3), strides=(1, 1), padding='same', use_bias=False),\n",
     "            keras.layers.BatchNormalization(),\n",
     "            keras.layers.LeakyReLU(),\n",
-    "            keras.layers.Conv2DTranspose(filters=64, kernel_size=(3, 3), strides=(2, 2), padding='same'),\n",
+    "            keras.layers.Conv2DTranspose(filters=64, kernel_size=(3, 3), strides=(2, 2), padding='same', use_bias=False),\n",
     "            keras.layers.BatchNormalization(),\n",
     "            keras.layers.LeakyReLU(),\n",
-    "            keras.layers.Conv2DTranspose(filters=1, kernel_size=(3, 3), strides=(2, 2), padding='same'),\n",
+    "            keras.layers.Conv2DTranspose(filters=1, kernel_size=(3, 3), strides=(2, 2), padding='same', use_bias=False),\n",
     "            keras.layers.Activation(tf.nn.tanh),\n",
     "        ]\n",
     "\n",
