fix path prefix for colab session

--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -88,13 +88,13 @@
     "try:\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
-    "    path_prefix = '/content/drive/My Drive/gan-vae/gan'\n",
+    "    path_prefix = '/content/drive/My Drive/gan-vae/gan/'\n",
     "    IN_COLAB = True\n",
     "except:\n",
     "    IN_COLAB = False\n",
     "    \n",
-    "METRICS_PATH = f'{path_prefix}/metrics/{ARCH}/'\n",
-    "OUTPUT_PATH = f'{path_prefix}/output/{ARCH}/'\n",
+    "METRICS_PATH = f'{path_prefix}metrics/{ARCH}/'\n",
+    "OUTPUT_PATH = f'{path_prefix}output/{ARCH}/'\n",
     "\n",
     "if not IN_COLAB:\n",
     "    !mkdir -p $METRICS_PATH\n",
