--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -550,6 +550,27 @@
     "plt.show()\n",
     "plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with imageio.get_writer(os.path.join(METRICS_PATH, 'dcgan.gif'), mode='I') as writer:\n",
+    "    filenames = glob.glob(os.path.join(OUTPUT_PATH, 'epoch*.png'))\n",
+    "    filenames = sorted(filenames)\n",
+    "    for filename in filenames:\n",
+    "        image = imageio.imread(filename)\n",
+    "        writer.append_data(image)\n",
+    "        image = imageio.imread(filename)\n",
+    "        writer.append_data(image)\n",
+    "\n",
+    "last_epoch_img = 'epoch_{:04d}'.format(EPOCHS)\n",
+    "last_epoch_img_output = os.path.join(OUTPUT_PATH, last_epoch_img)\n",
+    "last_epoch_img_metrics = os.path.join(METRICS_PATH, last_epoch_img)\n",
+    "Image.open(last_epoch_img_output).save(last_epoch_img_metrics)"
+   ]
   }
  ],
  "metadata": {
