--- a/vae/conv_vae_mnist.ipynb
+++ b/vae/conv_vae_mnist.ipynb
@@ -70,8 +70,21 @@
     "METRICS_PATH = f'metrics/{ARCH}/'\n",
     "OUTPUT_PATH = f'output/{ARCH}/'\n",
     "\n",
-    "!mkdir -p $METRICS_PATH\n",
-    "!mkdir -p $OUTPUT_PATH"
+    "IN_COLAB = False\n",
+    "try:\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    path_prefix = '/content/drive/My Drive/gan-vae/vae/'\n",
+    "    IN_COLAB = True\n",
+    "except:\n",
+    "    IN_COLAB = False\n",
+    "    \n",
+    "METRICS_PATH = f'{path_prefix}metrics/{ARCH}/'\n",
+    "OUTPUT_PATH = f'{path_prefix}output/{ARCH}/'\n",
+    "\n",
+    "if not IN_COLAB:\n",
+    "    !mkdir -p $METRICS_PATH\n",
+    "    !mkdir -p $OUTPUT_PATH"
    ]
   },
   {
@@ -134,11 +147,13 @@
     "        self.latent_dimension = latent_dimension\n",
     "        self.layers = [\n",
     "            keras.layers.InputLayer(input_shape=input_shape),\n",
+    "            keras.layers.Conv2D(filters=64, kernel_size=(3, 3), strides=(2, 2)),\n",
+    "            keras.layers.ReLU(),\n",
+    "            keras.layers.Conv2D(filters=128, kernel_size=(3, 3), strides=(2, 2)),\n",
+    "            keras.layers.ReLU(),\n",
     "            keras.layers.Flatten(),\n",
-    "            keras.layers.Dense(units=256),\n",
-    "            keras.layers.Activation(tf.nn.tanh),\n",
     "            keras.layers.Dense(units=latent_dimension*2),\n",
-    "            keras.layers.Reshape(target_shape=(latent_dimension, 2))\n",
+    "            keras.layers.Reshape(target_shape=(latent_dimension, 2)),\n",
     "        ]\n",
     "    \n",
     "    @tf.Module.with_name_scope\n",
@@ -194,11 +209,14 @@
     "        self.latent_dimension = latent_dimension\n",
     "        self.layers = [\n",
     "            keras.layers.InputLayer(input_shape=(latent_dimension,)),\n",
-    "            keras.layers.Dense(units=256),\n",
+    "            keras.layers.Dense(units=7*7*16),\n",
     "            keras.layers.Activation(tf.nn.tanh),\n",
-    "            keras.layers.Dense(units=tf.math.reduce_prod(output_shape)),\n",
-    "            keras.layers.Activation(tf.nn.sigmoid),\n",
-    "            keras.layers.Reshape(target_shape=output_shape),\n",
+    "            keras.layers.Reshape(target_shape=(7, 7, 16)),\n",
+    "            keras.layers.Conv2DTranspose(filters=64, kernel_size=(3, 3), strides=(2, 2), padding='same'),\n",
+    "            keras.layers.ReLU(),\n",
+    "            keras.layers.Conv2DTranspose(filters=32, kernel_size=(3, 3), strides=(2, 2), padding='same'),\n",
+    "            keras.layers.ReLU(),\n",
+    "            keras.layers.Conv2DTranspose(filters=1, kernel_size=(3, 3), strides=(1, 1), padding='same'),\n",
     "        ]"
    ]
   },
@@ -459,13 +477,7 @@
       "epoch 38/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 7.5180 - rec_loss: 147.3867 - loss: 154.9047\n",
       "\n",
-      "epoch 39/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 39/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.0201 - rec_loss: 139.6981 - loss: 147.71810s - kl_loss: 7.9942 - rec_loss: 142.8997 - loss: 150.89\n",
       "\n",
       "epoch 40/200\n",
@@ -564,13 +576,7 @@
       "epoch 71/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.3607 - rec_loss: 134.0174 - loss: 142.37812s - kl_loss: 8.5575 - rec_loss: 136.1067 - loss:  - ETA: 1s - kl_loss: 8.1193 - rec_loss: 131.6 - ETA: 1s - kl_loss: 8.0901 - rec_l - ETA: 0s - kl_loss: 8.3773 - rec_loss: 131.7039 - loss: 140.\n",
       "\n",
-      "epoch 72/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 72/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.5091 - rec_loss: 134.9781 - loss: 143.4871: 10s - kl_los - ETA: 3s - kl_loss: 8.48\n",
       "\n",
       "epoch 73/200\n",
@@ -684,13 +690,7 @@
       "epoch 109/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.6237 - rec_loss: 120.4409 - loss: 129.06461s - kl_loss: 8.7469 - r\n",
       "\n",
-      "epoch 110/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 110/200\n",
       "468/468 [==============================] - 11s 22ms/step - kl_loss: 8.7079 - rec_loss: 126.7842 - loss: 135.4921\n",
       "\n",
       "epoch 111/200\n",
@@ -789,13 +789,7 @@
       "epoch 142/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.6793 - rec_loss: 126.3183 - loss: 134.99777s - kl_loss: 8.8133 - rec_loss: 132.2 - ETA: 6s - kl_loss: 8.8477 - rec_loss: 116.6218 - loss: 125. - ETA: 0s - kl_loss: 8.8374 - rec_loss: 132.0946 - loss: 140.\n",
       "\n",
-      "epoch 143/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 143/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 9.1565 - rec_loss: 125.5366 - loss: 134.69324s - kl_loss:  - ETA: 3s - kl_loss: 8.9787 - rec_loss: 122.9886 - loss: 131. - ETA: 3s - kl_loss: 8.8757 - rec_loss: 126.534 - ETA: 2s - kl_loss: 8.8128 - rec_loss: 128.8102 - lo - ETA: 2s - kl_loss: 8.7713 - rec_loss: 119.2341 -  - ETA: 1s - kl_loss: 9.0181 - rec_loss: 120.1720 - lo - ETA: 1s - kl_loss: 8.8431 - rec_loss: 1 - ETA: 0s - kl_loss: 8.9293 - rec_loss: 120.5306 - lo\n",
       "\n",
       "epoch 144/200\n",
@@ -903,13 +897,7 @@
       "epoch 178/200\n",
       "468/468 [==============================] - 11s 24ms/step - kl_loss: 8.8439 - rec_loss: 119.4728 - loss: 128.31676s - kl_loss: 8.9756 - rec_loss: 123.763 - - ETA: 0s - kl_loss: 8.9024 - rec_loss: 126.2380 - loss: 13 - ETA: 0s - kl_loss: 9.0119 - rec_loss: 123.9336  - ETA: 0s - kl_loss: 8.7615 - rec_loss: 122.3639 - loss: 131.\n",
       "\n",
-      "epoch 179/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 179/200\n",
       "468/468 [==============================] - 11s 22ms/step - kl_loss: 8.9616 - rec_loss: 114.4177 - loss: 123.37930s - kl_loss: 9.2333 - rec_loss: 119.0936 - lo\n",
       "\n",
       "epoch 180/200\n",
@@ -1062,19 +1050,19 @@
     "plt.title('KL Divergence')\n",
     "plt.xlabel(batch_label)\n",
     "plt.ylabel(loss_label)\n",
-    "plt.plot(batch_history['kl_loss'])\n",
+    "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['rec_loss'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1))\n",
     "\n",
     "ax = plt.subplot(gs[0, 1])\n",
     "plt.title('Reconstruction Loss')\n",
     "plt.xlabel(batch_label)\n",
     "plt.ylabel(loss_label)\n",
-    "plt.plot(batch_history['rec_loss'], label='VAE Loss')\n",
+    "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['rec_loss'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1))\n",
     "\n",
     "ax = plt.subplot(gs[1, :])\n",
     "plt.title('Total Loss')\n",
     "plt.xlabel(batch_label)\n",
     "plt.ylabel(loss_label)\n",
-    "plt.plot(batch_history['loss'], label='VAE Loss')\n",
+    "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['loss'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1))\n",
     "\n",
     "plt.savefig(os.path.join(METRICS_PATH, 'loss.png'))\n",
     "plt.show()\n",
@@ -1094,7 +1082,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with imageio.get_writer(os.path.join(METRICS_PATH, 'vae.gif'), mode='I') as writer:\n",
+    "with imageio.get_writer(os.path.join(METRICS_PATH, 'dcgan.gif'), mode='I') as writer:\n",
     "    filenames = glob.glob(os.path.join(OUTPUT_PATH, 'epoch*.png'))\n",
     "    filenames = sorted(filenames)\n",
     "    for filename in filenames:\n",
@@ -1102,16 +1090,12 @@
     "        writer.append_data(image)\n",
     "        image = imageio.imread(filename)\n",
     "        writer.append_data(image)\n",
-    "final = Image.open(os.path.join(OUTPUT_PATH, 'epoch_{:04d}.png'.format(epoch)))\n",
-    "final.save(os.path.join(METRICS_PATH, 'epoch_{:04d}.png'.format(epoch)))"
+    "\n",
+    "last_epoch_img = 'epoch_{:04d}'.format(EPOCHS)\n",
+    "last_epoch_img_output = os.path.join(OUTPUT_PATH, last_epoch_img)\n",
+    "last_epoch_img_metrics = os.path.join(METRICS_PATH, last_epoch_img)\n",
+    "Image.open(last_epoch_img_output).save(last_epoch_img_metrics)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
