--- a/vae/conv_vae_mnist.ipynb
+++ b/vae/conv_vae_mnist.ipynb
@@ -244,7 +244,7 @@
     "train_dataset = tf.data.Dataset.from_tensor_slices(train_images) \\\n",
     "                               .shuffle(TRAIN_SIZE) \\\n",
     "                               .batch(BATCH_SIZE)\n",
-    "image_shape = train_images.shape[1:]\n",
+    "image_shape = (train_images.shape[1], train_images.shape[2], 1)\n",
     "\n",
     "test_images = test_images[:N_EXAMPLES] / 255.\n",
     "test_images = tf.round(test_images)\n",
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_encoded_tests = test_images[:N_EXAMPLES, :, :]\n",
+    "sample_encoded_tests = tf.expand_dims(test_images[:N_EXAMPLES, :, :], axis=-1)\n",
     "metric_names = ['kl_loss', 'rec_loss', 'loss']\n",
     "batch_history = { name: [] for name in metric_names }"
    ]
@@ -319,7 +319,7 @@
     "        predictions = data[i]\n",
     "        for j in range(predictions.shape[0]):\n",
     "            ax = plt.Subplot(f, inner[j])\n",
-    "            ax.imshow(predictions[j] * 255, cmap=plt.cm.gray)\n",
+    "            ax.imshow(predictions[j][:, :, 0] * 255, cmap=plt.cm.gray)\n",
     "            ax.axis('off')\n",
     "            if j == int(math.sqrt(N_EXAMPLES)) // 2:\n",
     "                ax.set_title(titles[i])\n",
