--- a/vae/conv_vae_mnist.ipynb
+++ b/vae/conv_vae_mnist.ipynb
@@ -240,7 +240,7 @@
     "(train_images, _), (test_images, _) = keras.datasets.mnist.load_data()\n",
     "train_images = train_images[:TRAIN_SIZE] / 255.\n",
     "train_images = tf.round(train_images)\n",
-    "train_images = tf.dtypes.cast(train_images, tf.float32)\n",
+    "train_images = tf.expand_tf.dtypes.cast(train_images, tf.float32)\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices(train_images) \\\n",
     "                               .shuffle(TRAIN_SIZE) \\\n",
     "                               .batch(BATCH_SIZE)\n",
@@ -968,7 +968,7 @@
    "source": [
     "record_sample(encoder, decoder, 0, show=False)\n",
     "optimizer = tf.optimizers.Adam(learning_rate=LEARNING_RATE)\n",
-    "epsilon = 1e-8\n",
+    "epsilon = 1e-6\n",
     "\n",
     "for epoch in range(1, EPOCHS+1):\n",
     "    print(f'\\nepoch {epoch}/{EPOCHS}')\n",
@@ -1012,7 +1012,6 @@
     "        grad = tape.gradient(loss, model_vars)\n",
     "        optimizer.apply_gradients(zip(grad, model_vars))\n",
     "\n",
-    "    progress_bar.update(TRAIN_SIZE / BATCH_SIZE, values=metric_values, finalize=True)\n",
     "    record_sample(encoder, decoder, epoch, show=False)"
    ]
   },
