--- a/vae/conv_vae_mnist.ipynb
+++ b/vae/conv_vae_mnist.ipynb
@@ -240,7 +240,7 @@
     "(train_images, _), (test_images, _) = keras.datasets.mnist.load_data()\n",
     "train_images = train_images[:TRAIN_SIZE] / 255.\n",
     "train_images = tf.round(train_images)\n",
-    "train_images = tf.expand_tf.dtypes.cast(train_images, tf.float32)\n",
+    "train_images = tf.expand_dims(tf.dtypes.cast(train_images, tf.float32), axis=-1)\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices(train_images) \\\n",
     "                               .shuffle(TRAIN_SIZE) \\\n",
     "                               .batch(BATCH_SIZE)\n",
