sigmoidal decoder output

--- a/vae/conv_vae_mnist.ipynb
+++ b/vae/conv_vae_mnist.ipynb
@@ -217,6 +217,7 @@
     "            keras.layers.Conv2DTranspose(filters=32, kernel_size=(3, 3), strides=(2, 2), padding='same'),\n",
     "            keras.layers.ReLU(),\n",
     "            keras.layers.Conv2DTranspose(filters=1, kernel_size=(3, 3), strides=(1, 1), padding='same'),\n",
+    "            keras.layers.Activation(tf.nn.sigmoid)\n",
     "        ]"
    ]
   },
