--- a/vae/conv_vae_mnist.ipynb
+++ b/vae/conv_vae_mnist.ipynb
@@ -59,14 +59,14 @@
    "outputs": [],
    "source": [
     "TRAIN_SIZE = 60000\n",
-    "BATCH_SIZE = 128\n",
+    "BATCH_SIZE = 64\n",
     "EPOCHS = 200\n",
     "\n",
     "N_EXAMPLES = 25\n",
     "LEARNING_RATE = 1e-4\n",
     "LATENT_DIMENSION = 3\n",
     "\n",
-    "ARCH = 'vae'\n",
+    "ARCH = 'cvae'\n",
     "METRICS_PATH = f'metrics/{ARCH}/'\n",
     "OUTPUT_PATH = f'output/{ARCH}/'\n",
     "\n",
