--- a/vae/conv_vae_mnist.ipynb
+++ b/vae/conv_vae_mnist.ipynb
@@ -1082,7 +1082,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with imageio.get_writer(os.path.join(METRICS_PATH, 'dcgan.gif'), mode='I') as writer:\n",
+    "with imageio.get_writer(os.path.join(METRICS_PATH, f'{ARCH}.gif'), mode='I') as writer:\n",
     "    filenames = glob.glob(os.path.join(OUTPUT_PATH, 'epoch*.png'))\n",
     "    filenames = sorted(filenames)\n",
     "    for filename in filenames:\n",
@@ -1091,7 +1091,7 @@
     "        image = imageio.imread(filename)\n",
     "        writer.append_data(image)\n",
     "\n",
-    "last_epoch_img = 'epoch_{:04d}'.format(EPOCHS)\n",
+    "last_epoch_img = 'epoch_{:04d}.png'.format(EPOCHS)\n",
     "last_epoch_img_output = os.path.join(OUTPUT_PATH, last_epoch_img)\n",
     "last_epoch_img_metrics = os.path.join(METRICS_PATH, last_epoch_img)\n",
     "Image.open(last_epoch_img_output).save(last_epoch_img_metrics)"
