--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -557,7 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with imageio.get_writer(os.path.join(METRICS_PATH, 'dcgan.gif'), mode='I') as writer:\n",
+    "with imageio.get_writer(os.path.join(METRICS_PATH, f'{ARCH}.gif'), mode='I') as writer:\n",
     "    filenames = glob.glob(os.path.join(OUTPUT_PATH, 'epoch*.png'))\n",
     "    filenames = sorted(filenames)\n",
     "    for filename in filenames:\n",
