--- a/vae/vae_mnist.ipynb
+++ b/vae/vae_mnist.ipynb
@@ -459,13 +459,7 @@
       "epoch 38/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 7.5180 - rec_loss: 147.3867 - loss: 154.9047\n",
       "\n",
-      "epoch 39/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 39/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.0201 - rec_loss: 139.6981 - loss: 147.71810s - kl_loss: 7.9942 - rec_loss: 142.8997 - loss: 150.89\n",
       "\n",
       "epoch 40/200\n",
@@ -564,13 +558,7 @@
       "epoch 71/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.3607 - rec_loss: 134.0174 - loss: 142.37812s - kl_loss: 8.5575 - rec_loss: 136.1067 - loss:  - ETA: 1s - kl_loss: 8.1193 - rec_loss: 131.6 - ETA: 1s - kl_loss: 8.0901 - rec_l - ETA: 0s - kl_loss: 8.3773 - rec_loss: 131.7039 - loss: 140.\n",
       "\n",
-      "epoch 72/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 72/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.5091 - rec_loss: 134.9781 - loss: 143.4871: 10s - kl_los - ETA: 3s - kl_loss: 8.48\n",
       "\n",
       "epoch 73/200\n",
@@ -684,13 +672,7 @@
       "epoch 109/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.6237 - rec_loss: 120.4409 - loss: 129.06461s - kl_loss: 8.7469 - r\n",
       "\n",
-      "epoch 110/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 110/200\n",
       "468/468 [==============================] - 11s 22ms/step - kl_loss: 8.7079 - rec_loss: 126.7842 - loss: 135.4921\n",
       "\n",
       "epoch 111/200\n",
@@ -789,13 +771,7 @@
       "epoch 142/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 8.6793 - rec_loss: 126.3183 - loss: 134.99777s - kl_loss: 8.8133 - rec_loss: 132.2 - ETA: 6s - kl_loss: 8.8477 - rec_loss: 116.6218 - loss: 125. - ETA: 0s - kl_loss: 8.8374 - rec_loss: 132.0946 - loss: 140.\n",
       "\n",
-      "epoch 143/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 143/200\n",
       "468/468 [==============================] - 11s 23ms/step - kl_loss: 9.1565 - rec_loss: 125.5366 - loss: 134.69324s - kl_loss:  - ETA: 3s - kl_loss: 8.9787 - rec_loss: 122.9886 - loss: 131. - ETA: 3s - kl_loss: 8.8757 - rec_loss: 126.534 - ETA: 2s - kl_loss: 8.8128 - rec_loss: 128.8102 - lo - ETA: 2s - kl_loss: 8.7713 - rec_loss: 119.2341 -  - ETA: 1s - kl_loss: 9.0181 - rec_loss: 120.1720 - lo - ETA: 1s - kl_loss: 8.8431 - rec_loss: 1 - ETA: 0s - kl_loss: 8.9293 - rec_loss: 120.5306 - lo\n",
       "\n",
       "epoch 144/200\n",
@@ -903,13 +879,7 @@
       "epoch 178/200\n",
       "468/468 [==============================] - 11s 24ms/step - kl_loss: 8.8439 - rec_loss: 119.4728 - loss: 128.31676s - kl_loss: 8.9756 - rec_loss: 123.763 - - ETA: 0s - kl_loss: 8.9024 - rec_loss: 126.2380 - loss: 13 - ETA: 0s - kl_loss: 9.0119 - rec_loss: 123.9336  - ETA: 0s - kl_loss: 8.7615 - rec_loss: 122.3639 - loss: 131.\n",
       "\n",
-      "epoch 179/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "epoch 179/200\n",
       "468/468 [==============================] - 11s 22ms/step - kl_loss: 8.9616 - rec_loss: 114.4177 - loss: 123.37930s - kl_loss: 9.2333 - rec_loss: 119.0936 - lo\n",
       "\n",
       "epoch 180/200\n",
@@ -1062,19 +1032,19 @@
     "plt.title('KL Divergence')\n",
     "plt.xlabel(batch_label)\n",
     "plt.ylabel(loss_label)\n",
-    "plt.plot(batch_history['kl_loss'])\n",
+    "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['rec_loss'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1))\n",
     "\n",
     "ax = plt.subplot(gs[0, 1])\n",
     "plt.title('Reconstruction Loss')\n",
     "plt.xlabel(batch_label)\n",
     "plt.ylabel(loss_label)\n",
-    "plt.plot(batch_history['rec_loss'], label='VAE Loss')\n",
+    "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['rec_loss'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1))\n",
     "\n",
     "ax = plt.subplot(gs[1, :])\n",
     "plt.title('Total Loss')\n",
     "plt.xlabel(batch_label)\n",
     "plt.ylabel(loss_label)\n",
-    "plt.plot(batch_history['loss'], label='VAE Loss')\n",
+    "plt.plot(tf.math.reduce_mean(tf.reshape(batch_history['loss'], shape=(-1, math.ceil(TRAIN_SIZE / BATCH_SIZE))), axis=1))\n",
     "\n",
     "plt.savefig(os.path.join(METRICS_PATH, 'loss.png'))\n",
     "plt.show()\n",
