gan step update

--- a/gan/gan_mnist.ipynb
+++ b/gan/gan_mnist.ipynb
@@ -359,7 +359,7 @@
     "        predictions = data[i]\n",
     "        for j in range(predictions.shape[0]):\n",
     "            ax = plt.Subplot(f, inner[j])\n",
-    "            ax.imshow(predictions[j]*127.5 + 127.5, cmap=plt.cm.gray)\n",
+    "            ax.imshow(predictions[j][:, :, 0]*127.5 + 127.5, cmap=plt.cm.gray)\n",
     "            ax.axis('off')\n",
     "            if j == int(math.sqrt(N_EXAMPLES)) // 2:\n",
     "                ax.set_title(titles[i])\n",
@@ -1285,8 +1285,6 @@
     "\n",
     "    for metric in epoch_history:\n",
     "        epoch_history[metric].append(batch_history[metric][-1])\n",
-    "\n",
-    "    progress_bar.update(steps_per_epoch, values=batch_metric_values, finalize=True)\n",
     "\n",
     "    record_sample(generator, epoch, show=False)"
    ]
