--- a/vae/vae_mnist.ipynb
+++ b/vae/vae_mnist.ipynb
@@ -42,6 +42,7 @@
     "import math\n",
     "import os\n",
     "import seaborn as sn\n",
+    "import time\n",
     "\n",
     "from abc import abstractstaticmethod\n",
     "from matplotlib import gridspec\n",
