--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -260,9 +260,8 @@
     "        # Network layers\n",
     "        self.layers = [\n",
     "            keras.layers.InputLayer(input_shape=input_shape),\n",
-    "            keras.layers.Conv2D(filters=32, kernel_size=(3, 3), strides=(2, 2)),\n",
-    "            keras.layers.LeakyReLU(),\n",
     "            keras.layers.Conv2D(filters=64, kernel_size=(3, 3), strides=(2, 2)),\n",
+    "            keras.layers.BatchNormalization(),\n",
     "            keras.layers.LeakyReLU(),\n",
     "            keras.layers.Dropout(rate=0.3),\n",
     "            keras.layers.Conv2D(filters=128, kernel_size=(3, 3), strides=(2, 2)),\n",
