--- a/gan/gan_mnist.ipynb
+++ b/gan/gan_mnist.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "fixed_noise = tf.random.normal([N_EXAMPLES, NOISE_DIMENSION])\n",
-    "metric_names = ['g_loss', 'd_loss', 'real_acc', 'fake_acc']\n",
+    "metric_names = ['g_loss', 'd_loss', 'acc', 'real_acc', 'fake_acc']\n",
     "batch_history = { name: [] for name in metric_names }\n",
     "epoch_history = { name: [] for name in metric_names[2:] }"
    ]
@@ -413,12 +413,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "record_sample(generator, 0, show=False)\n",
     "steps_per_epoch = train_images.shape[0] // BATCH_SIZE\n",
@@ -445,10 +441,12 @@
     "            d_loss = discriminator.loss(trained_output, generated_output)\n",
     "\n",
     "        real_acc, fake_acc = accuracy(trained_output, generated_output)\n",
+    "        acc = 0.5 * (real_acc + fake_acc)\n",
     "\n",
     "        batch_metrics = {\n",
     "            'g_loss': g_loss,\n",
     "            'd_loss': d_loss,\n",
+    "            'acc': acc,\n",
     "            'real_acc': real_acc,\n",
     "            'fake_acc': fake_acc,\n",
     "        }\n",
