--- a/gan/dcgan_mnist.ipynb
+++ b/gan/dcgan_mnist.ipynb
@@ -565,7 +565,7 @@
     "        image = imageio.imread(filename)\n",
     "        writer.append_data(image)\n",
     "\n",
-    "last_epoch_img = 'epoch_{:04d}'.format(EPOCHS)\n",
+    "last_epoch_img = 'epoch_{:04d}.png'.format(EPOCHS)\n",
     "last_epoch_img_output = os.path.join(OUTPUT_PATH, last_epoch_img)\n",
     "last_epoch_img_metrics = os.path.join(METRICS_PATH, last_epoch_img)\n",
     "Image.open(last_epoch_img_output).save(last_epoch_img_metrics)"
