--- a/vae/vae_mnist.ipynb
+++ b/vae/vae_mnist.ipynb
@@ -459,8 +459,11 @@
     "        writer.append_data(image)\n",
     "        image = imageio.imread(filename)\n",
     "        writer.append_data(image)\n",
-    "final = Image.open(os.path.join(OUTPUT_PATH, 'epoch_{:04d}.png'.format(epoch)))\n",
-    "final.save(os.path.join(METRICS_PATH, 'epoch_{:04d}.png'.format(epoch)))"
+    "\n",
+    "last_epoch_img = 'epoch_{:04d}.png'.format(EPOCHS)\n",
+    "last_epoch_img_output = os.path.join(OUTPUT_PATH, last_epoch_img)\n",
+    "last_epoch_img_metrics = os.path.join(METRICS_PATH, last_epoch_img)\n",
+    "Image.open(last_epoch_img_output).save(last_epoch_img_metrics)"
    ]
   }
  ],
